--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,14 @@
     <TextView
         android:id="@+id/pokeHeader"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_height="60dp"
+        android:background="#2a75bb"
+        android:fontFamily="@font/amiko_bold"
         android:text="Pokemon"
         android:textAlignment="center"
+        android:textColor="#ffcb05"
         android:textSize="50dp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Reset"
+        android:backgroundTint="#2a75bb"
+        android:textAppearance="@style/TextAppearance.Quote"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
